tests/integration/snapshots/integration__conformance__n_array_invalid_utf8.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
command: "jjp"
status: 1
success: false
stdout ---
raw bytes: [91, 255, 93]
stderr ---
error: source did not contain valid utf8
 --> stdin
  |
