tests/integration/snapshots/integration__conformance__n_array_spaces_vertical_tab_formfeed.json-format---uglify.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 1
success: false
stdin ---
["a"\f]
stdout ---

stderr ---
error: unexpected unescaped control character `\u000B` in string literal
 --> stdin:1:3
  |
1 | ["␋a"\f]
  |   ^
  |
help: replace the control character with its escaped form
  |
1 | ["\u000Ba"\f]
  |   ++++++
